--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .history
 .svn/
 
+.env
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -30,6 +32,7 @@
 .pub-cache/
 .pub/
 /build/
+
 
 # Web related
 lib/generated_plugin_registrant.dart
